Bug 1828427 - Removed incorrect assertion r=gerard-majax

Differential Revision: https://phabricator.services.mozilla.com/D175663